{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 44,
  "lineage": "d971dbb5-84c3-5bac-adc2-c59c72c924b0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-012d6a40f31bc45c7",
            "domain": "vpc",
            "id": "eipalloc-03868eeacd23a93e2",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0db696b3ed613ca9c",
            "private_dns": "ip-10-0-0-144.eu-central-1.compute.internal",
            "private_ip": "10.0.0.144",
            "public_dns": "ec2-3-66-207-70.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.66.207.70",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:760737428678:internet-gateway/igw-00de63ae884b21da2",
            "id": "igw-00de63ae884b21da2",
            "owner_id": "760737428678",
            "tags": {
              "Name": "cng-lateflows-dev-internet-gateway"
            },
            "tags_all": {
              "Name": "cng-lateflows-dev-internet-gateway"
            },
            "vpc_id": "vpc-0bd99592831326301"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03868eeacd23a93e2",
            "connectivity_type": "public",
            "id": "nat-089fe7d452734aa56",
            "network_interface_id": "eni-0db696b3ed613ca9c",
            "private_ip": "10.0.0.144",
            "public_ip": "3.66.207.70",
            "subnet_id": "subnet-0f668f413df207758",
            "tags": {
              "Name": "cng-lateflows-dev-nat-gateway"
            },
            "tags_all": {
              "Name": "cng-lateflows-dev-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public-1",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:760737428678:route-table/rtb-0e1607b160156dc34",
            "id": "rtb-0e1607b160156dc34",
            "owner_id": "760737428678",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-089fe7d452734aa56",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cng-lateflows-dev-private-route-table"
            },
            "tags_all": {
              "Name": "cng-lateflows-dev-private-route-table"
            },
            "vpc_id": "vpc-0bd99592831326301"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public-1",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:760737428678:route-table/rtb-047796c855689b6ed",
            "id": "rtb-047796c855689b6ed",
            "owner_id": "760737428678",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00de63ae884b21da2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cng-lateflows-dev-public-route-table"
            },
            "tags_all": {
              "Name": "cng-lateflows-dev-public-route-table"
            },
            "vpc_id": "vpc-0bd99592831326301"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f6a242d5d799275",
            "route_table_id": "rtb-0e1607b160156dc34",
            "subnet_id": "subnet-08ce812af65661f0e"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-1",
            "aws_subnet.public-1",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04cff3bec764c8b0d",
            "route_table_id": "rtb-0e1607b160156dc34",
            "subnet_id": "subnet-039c69b50faec1ca8"
          },
          "dependencies": [
            "aws_subnet.public-1",
            "aws_vpc.default",
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2479577b0562753",
            "route_table_id": "rtb-047796c855689b6ed",
            "subnet_id": "subnet-0f668f413df207758"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.public",
            "aws_subnet.public-1",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b25005196d1288a6",
            "route_table_id": "rtb-047796c855689b6ed",
            "subnet_id": "subnet-092563d56fee19cad"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.public",
            "aws_subnet.public-2",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:760737428678:subnet/subnet-08ce812af65661f0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-08ce812af65661f0e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "760737428678",
            "tags": {
              "Name": "cng-lateflows-dev-private-subnet-1"
            },
            "tags_all": {
              "Name": "cng-lateflows-dev-private-subnet-1"
            },
            "vpc_id": "vpc-0bd99592831326301"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:760737428678:subnet/subnet-039c69b50faec1ca8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-039c69b50faec1ca8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "760737428678",
            "tags": {
              "Name": "cng-lateflows-dev-private-subnet-2"
            },
            "tags_all": {
              "Name": "cng-lateflows-dev-private-subnet-2"
            },
            "vpc_id": "vpc-0bd99592831326301"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:760737428678:subnet/subnet-0f668f413df207758",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0f668f413df207758",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "760737428678",
            "tags": {
              "Name": "cng-lateflows-dev-public-subnet-1"
            },
            "tags_all": {
              "Name": "cng-lateflows-dev-public-subnet-1"
            },
            "vpc_id": "vpc-0bd99592831326301"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:760737428678:subnet/subnet-092563d56fee19cad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-092563d56fee19cad",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "760737428678",
            "tags": {
              "Name": "cng-lateflows-dev-public-subnet-2"
            },
            "tags_all": {
              "Name": "cng-lateflows-dev-public-subnet-2"
            },
            "vpc_id": "vpc-0bd99592831326301"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:760737428678:vpc/vpc-0bd99592831326301",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-098d2d4fbce716758",
            "default_route_table_id": "rtb-08f276b492149cff6",
            "default_security_group_id": "sg-0c5baa7e013387b8c",
            "dhcp_options_id": "dopt-0f3f67cf1a8fbf8fb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0bd99592831326301",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08f276b492149cff6",
            "owner_id": "760737428678",
            "tags": {
              "Name": "cng-lateflows-dev"
            },
            "tags_all": {
              "Name": "cng-lateflows-dev"
            }
          }
        }
      ]
    }
  ]
}